# PackageProject.cmake

./: .cmake-format  .gitignore  CMakeLists.txt  Config.cmake.in  README.md  version.h.in
.github/workflows/: packaging.yml  style.yml  test.yml
test/: CMakeLists.txt  main.cpp
test/dependency/: CMakeLists.txt
test/dependency/include/dependency/: dependency.h
test/dependency/source/: dependency.cpp
test/dependency2/: CMakeLists.txt
test/dependency2/include/dependency2/: dependency2.h
test/dependency2/source/: dependency2.cpp
test/header_only/: CMakeLists.txt
test/header_only/include/header_only/: adder.h
test/namespaced_dependency/: CMakeLists.txt
test/namespaced_dependency/include/namespaced_dependency/: namespaced_dependency.h
test/namespaced_dependency/source/: namespaced_dependency.cpp
test/packaging/: CMakeLists.txt
test/packaging/source/: packaging.cpp
test/runtime_destination_dependency/: CMakeLists.txt
test/runtime_destination_dependency/include/runtime_destination_dependency/: dependency.h
test/runtime_destination_dependency/source/: dependency.cpp
test/style/: CMakeLists.txt
test/transitive_dependency/: CMakeLists.txt
test/transitive_dependency/cmake/: CPM.cmake
test/transitive_dependency/include/transitive_dependency/: transitive_dependency.h
test/transitive_dependency/source/: transitive_dependency.cpp
